--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorPrimaryDark"
+    andriod:theme="@style/AppTheme.NoActionBar"
     tools:context="com.chirpper.cwalker2209.chirpper.LoginActivity">
 
     <!-- Login progress -->
