--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6ccc3f</color>
+    <color name="colorPrimary">#57a433</color>
     <color name="colorPrimaryDark">#57a433</color>
     <color name="colorAccent">#5b8ada</color>
 </resources>
