--- a/app/src/main/res/layout/content_feed.xml
+++ b/app/src/main/res/layout/content_feed.xml
@@ -8,10 +8,163 @@
     tools:context="com.chirpper.cwalker2209.chirpper.FeedActivity"
     tools:showIn="@layout/activity_feed">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
 
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp">
+
+
+        <TableRow
+            style="@style/FeedRow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher_round" />
+
+            <TextView
+                android:id="@+id/textView1"
+                style="@style/Chirp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Sample Feed Content" />
+        </TableRow>
+
+        <TableRow
+            style="@style/FeedRow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imageView14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher_round" />
+
+            <TextView
+                android:id="@+id/textView14"
+                style="@style/Chirp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Sample Feed Content" />
+        </TableRow>
+
+        <TableRow
+            style="@style/FeedRow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imageView13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher_round" />
+
+            <TextView
+                android:id="@+id/textView13"
+                style="@style/Chirp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Sample Feed Content" />
+        </TableRow>
+
+        <TableRow
+            style="@style/FeedRow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher_round" />
+
+            <TextView
+                android:id="@+id/textView12"
+                style="@style/Chirp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Sample Feed Content" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/FeedRow">
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher_round" />
+
+            <TextView
+                android:id="@+id/textView11"
+                style="@style/Chirp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Sample Feed Content" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/FeedRow">
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher_round" />
+
+            <TextView
+                android:id="@+id/textView3"
+                style="@style/Chirp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Sample Feed Content" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/FeedRow">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher_round" />
+
+            <TextView
+                android:id="@+id/textView4"
+                style="@style/Chirp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Sample Feed Content" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/FeedRow">
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher_round" />
+
+            <TextView
+                android:id="@+id/textView5"
+                style="@style/Chirp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Sample Feed Content" />
+        </TableRow>
+    </TableLayout>
 </android.support.v4.widget.NestedScrollView>
