--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,15 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="FeedRow" parent="@android:style/Widget.TextView">
+        <item name="android:layout_marginBottom">16sp</item>
+        <item name="android:padding">10sp</item>
+        <item name="android:background">@drawable/chirp</item>
+    </style>
+
+    <style name="Chirp" parent="@android:style/Widget.TextView">
+        <item name="android:layout_marginLeft">8sp</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 </resources>
