--- a/app/src/main/res/layout/content_feed.xml
+++ b/app/src/main/res/layout/content_feed.xml
@@ -10,6 +10,7 @@
 
 
     <TableLayout
+        android:id="@+id/feedTable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp">
