--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -28,53 +28,50 @@
                 android:id="@+id/imageViewAvatar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 android:layout_marginLeft="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                app:srcCompat="@mipmap/ic_launcher" />
 
-            <TextView
-                android:id="@+id/textViewName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/imageViewAvatar"
-                android:layout_marginLeft="19dp"
-                android:layout_marginStart="19dp"
-                android:layout_toEndOf="@+id/imageViewAvatar"
-                android:layout_toRightOf="@+id/imageViewAvatar"
-                android:text="Name" />
-
-            <TextView
-                android:id="@+id/textViewHandle"
+            <EditText
+                android:id="@+id/editTextName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/imageViewAvatar"
-                android:layout_alignLeft="@+id/textViewName"
-                android:layout_alignStart="@+id/textViewName"
-                android:text="Handle" />
+                android:layout_marginLeft="29dp"
+                android:layout_marginStart="29dp"
+                android:layout_toEndOf="@+id/imageViewAvatar"
+                android:layout_toRightOf="@+id/imageViewAvatar"
+                android:ems="10"
+                android:hint="Name"
+                android:inputType="textPersonName"
+                android:text="Name" />
 
-            <TextView
-                android:id="@+id/textViewDate"
+            <EditText
+                android:id="@+id/editTextDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textViewHandle"
-                android:layout_alignStart="@+id/textViewHandle"
-                android:layout_below="@+id/textViewHandle"
-                android:layout_marginTop="45dp"
-                android:text="Date" />
+                android:layout_alignLeft="@+id/editTextName"
+                android:layout_alignStart="@+id/editTextName"
+                android:layout_below="@+id/editTextName"
+                android:layout_marginTop="26dp"
+                android:ems="10"
+                android:hint="Description"
+                android:inputType="textMultiLine"
+                android:text="Descripiton" />
 
-            <TextView
-                android:id="@+id/textViewDescription"
+            <Button
+                android:id="@+id/buttonSaveProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textViewDate"
-                android:layout_alignStart="@+id/textViewDate"
-                android:layout_below="@+id/textViewDate"
-                android:layout_marginTop="19dp"
-                android:text="Description" />
+                android:layout_alignEnd="@+id/editTextDescription"
+                android:layout_alignRight="@+id/editTextDescription"
+                android:layout_centerVertical="true"
+                android:text="Save Changes" />
+
         </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
