profile save/load  fixed

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -66,6 +66,16 @@
                 android:layout_below="@+id/textViewDate"
                 android:layout_marginTop="19dp"
                 android:text="Description" />
+
+            <Button
+                android:id="@+id/buttonEditProfile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="46dp"
+                android:layout_marginEnd="28dp"
+                android:text="Edit Profile" />
         </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
