--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -26,8 +26,8 @@
 
             <ImageView
                 android:id="@+id/imageViewAvatar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -40,11 +40,9 @@
                 android:id="@+id/editTextName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/imageViewAvatar"
-                android:layout_marginLeft="29dp"
-                android:layout_marginStart="29dp"
-                android:layout_toEndOf="@+id/imageViewAvatar"
-                android:layout_toRightOf="@+id/imageViewAvatar"
+                android:layout_alignStart="@+id/imageViewAvatar"
+                android:layout_below="@+id/imageViewAvatar"
+                android:layout_marginTop="19dp"
                 android:ems="10"
                 android:hint="Name"
                 android:inputType="textPersonName"
@@ -67,10 +65,20 @@
                 android:id="@+id/buttonSaveProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/editTextDescription"
-                android:layout_alignRight="@+id/editTextDescription"
-                android:layout_centerVertical="true"
+                android:layout_alignBaseline="@+id/buttonChangeAvatar"
+                android:layout_alignBottom="@+id/buttonChangeAvatar"
+                android:layout_toEndOf="@+id/imageViewAvatar"
                 android:text="Save Changes" />
+
+            <Button
+                android:id="@+id/buttonChangeAvatar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editTextDescription"
+                android:layout_marginEnd="18dp"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/buttonSaveProfile"
+                android:text="Change Avatar" />
 
         </RelativeLayout>
 
