--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,46 +26,42 @@
 
             <ImageView
                 android:id="@+id/imageViewAvatar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
-                app:srcCompat="@mipmap/ic_launcher"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_marginEnd="22dp"
+                android:layout_marginTop="24dp"
+                android:layout_toStartOf="@+id/buttonEditProfile"
+                app:srcCompat="@mipmap/ic_launcher" />
 
             <TextView
                 android:id="@+id/textViewName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/imageViewAvatar"
-                android:layout_marginLeft="19dp"
-                android:layout_marginStart="19dp"
-                android:layout_toEndOf="@+id/imageViewAvatar"
-                android:layout_toRightOf="@+id/imageViewAvatar"
-                android:text="Name" />
+                android:layout_alignStart="@+id/imageViewAvatar"
+                android:layout_centerVertical="true"
+                android:text="Name"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/textViewDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textViewName"
-                android:layout_alignStart="@+id/textViewName"
-                android:layout_below="@+id/imageViewAvatar"
-                android:layout_marginTop="38dp"
-                android:text="Date" />
+                android:layout_alignBaseline="@+id/textView"
+                android:layout_alignBottom="@+id/textView"
+                android:layout_marginStart="13dp"
+                android:layout_toEndOf="@+id/textView"
+                android:text="Date"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/textViewDescription"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textViewDate"
-                android:layout_alignStart="@+id/textViewDate"
-                android:layout_below="@+id/textViewDate"
-                android:layout_marginTop="19dp"
-                android:text="Description" />
+                android:layout_alignStart="@+id/textView2"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="12dp"
+                android:text="Description Text" />
 
             <Button
                 android:id="@+id/buttonEditProfile"
@@ -76,6 +72,27 @@
                 android:layout_marginBottom="46dp"
                 android:layout_marginEnd="28dp"
                 android:text="Edit Profile" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/textViewName"
+                android:layout_below="@+id/textViewName"
+                android:layout_marginTop="13dp"
+                android:text="Date Started"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/textView"
+                android:layout_below="@+id/textView"
+                android:layout_marginTop="11dp"
+                android:text="Description"
+                android:textStyle="bold" />
         </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
