--- a/app/src/main/res/layout/content_feed.xml
+++ b/app/src/main/res/layout/content_feed.xml
@@ -13,6 +13,7 @@
         android:id="@+id/feedTable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:shrinkColumns="1"
         android:padding="10dp">
 
 
