--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="FeedRow" parent="@android:style/Widget.TextView">
+    <style name="FeedRow" parent="android:style/Widget.TextView">
         <item name="android:layout_marginBottom">16sp</item>
         <item name="android:padding">10sp</item>
         <item name="android:background">@drawable/chirp</item>
@@ -26,6 +26,15 @@
     <style name="Chirp" parent="@android:style/Widget.TextView">
         <item name="android:layout_marginLeft">8sp</item>
         <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="ChirpImage">
+        <item name="android:width">72dp</item>
+        <item name="android:height">72dp</item>
+    </style>
+
+    <style name="BlackButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@android:color/black</item>
     </style>
 
     <style name="AppTheme.NoActionBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
