--- a/app/src/main/res/layout-land/activity_profile.xml
+++ b/app/src/main/res/layout-land/activity_profile.xml
@@ -38,8 +38,9 @@
                 android:id="@+id/textViewName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/imageViewAvatar"
-                android:layout_centerVertical="true"
+                android:layout_alignTop="@+id/imageViewAvatar"
+                android:layout_marginStart="15dp"
+                android:layout_toEndOf="@+id/imageViewAvatar"
                 android:text="Name"
                 android:textSize="30sp" />
 
