--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -28,21 +28,17 @@
                 android:id="@+id/imageViewAvatar"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
+                android:layout_alignStart="@+id/editTextName"
+                android:layout_marginTop="27dp"
                 app:srcCompat="@mipmap/ic_launcher" />
 
             <EditText
                 android:id="@+id/editTextName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/imageViewAvatar"
-                android:layout_below="@+id/imageViewAvatar"
-                android:layout_marginTop="19dp"
+                android:layout_alignStart="@+id/buttonChangeAvatar"
+                android:layout_centerVertical="true"
                 android:ems="10"
                 android:hint="Name"
                 android:inputType="textPersonName"
@@ -67,7 +63,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/buttonChangeAvatar"
                 android:layout_alignBottom="@+id/buttonChangeAvatar"
-                android:layout_toEndOf="@+id/imageViewAvatar"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="54dp"
                 android:text="Save Changes" />
 
             <Button
