--- a/app/src/main/res/layout/content_feed.xml
+++ b/app/src/main/res/layout/content_feed.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:requiresFadingEdge="vertical"
     tools:context="com.chirpper.cwalker2209.chirpper.FeedActivity"
     tools:showIn="@layout/activity_feed">
 
