--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -28,18 +28,18 @@
                 android:id="@+id/imageViewAvatar"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_above="@+id/buttonEditProfile"
-                android:layout_marginEnd="11dp"
-                android:layout_toStartOf="@+id/textViewName"
+                android:layout_alignParentTop="true"
+                android:layout_alignStart="@+id/textViewName"
+                android:layout_marginTop="16dp"
                 app:srcCompat="@mipmap/ic_launcher" />
 
             <TextView
                 android:id="@+id/textViewName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/imageViewAvatar"
-                android:layout_marginEnd="142dp"
-                android:layout_toStartOf="@+id/buttonEditProfile"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="28dp"
                 android:text="Name"
                 android:textSize="30sp" />
 
