--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,8 +30,9 @@
     </style>
 
     <style name="ChirpImage">
-        <item name="android:width">72dp</item>
-        <item name="android:height">72dp</item>
+        <item name="android:layout_width">72px</item>
+        <item name="android:layout_height">72px</item>
+        <item name ="android:scaleType">fitXY</item>
     </style>
 
     <style name="BlackButton" parent="Widget.AppCompat.Button.Colored">
