--- a/app/src/main/res/layout-land/activity_edit_profile.xml
+++ b/app/src/main/res/layout-land/activity_edit_profile.xml
@@ -36,6 +36,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <Button
+                android:id="@+id/buttonDownload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/buttonChangeAvatar"
+                android:layout_below="@+id/buttonChangeAvatar"
+                android:layout_marginTop="10dp"
+                android:text="Download Default Avatar" />
+
             <ImageView
                 android:id="@+id/imageViewAvatar"
                 android:layout_width="200dp"
