--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -87,6 +87,15 @@
                 android:layout_marginTop="32dp"
                 android:text="Change Avatar" />
 
+            <Button
+                android:id="@+id/buttonDownload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/buttonChangeAvatar"
+                android:layout_below="@+id/buttonChangeAvatar"
+                android:layout_marginTop="10dp"
+                android:text="Download Default Avatar" />
+
         </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
